# nublog

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  app.config.ts  app.vue  error.vue  eslint.config.js  justfile  nuxt.app-config.d.ts  nuxt.config.ts  package-lock.json  package.json  reset-cloud-server.md  types.d.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: global.css  markdown.css
components/: AppFooter.vue  AppHeader.vue  AppLayout.vue  GotoTopBtm.vue  HLink.vue  MarkdownPage.vue  XLink.ts  XLink.vue
components/markdown/: EditDate.vue  GraphViz.vue  MarkdownArea.vue  MarkdownImage.vue
composables/: queryContent.ts
content/: .gitignore  about.md
content/about/: index.md
content/articles/2018/12/bpnn-rs/: index.md
content/articles/2023/04/simd-distinct9/: Cargo.toml  a.c  b.c  bench.rs  index.md  justfile  lib.rs
content/articles/test1/: index.md
content/articles/test2/: index.md
modules/content/: cache.ts  codeblock.ts  date.ts  image.ts  index.ts  link.ts  markdown.ts  md.d.ts  registry.ts  remark-extract-title.ts  script.ts  types.d.ts  utils.ts  vite.ts
nublog-front/: package.json  tsconfig.json
nublog-front/pages/: Home.tsx  index.tsx
nublog-front/pages/api/: hello.tsx
nublog-front/src/: config.ts  hooks.ts  state.ts  util.ts  utils.ts  vo.ts
nublog-front/src/api/: csr.ts  dto.ts  ssr.ts
nublog-front/src/components/: Admin.tsx  ArticleCard.tsx  ArticleMeta.tsx  CenteredDiv.tsx  CommentArea.tsx  Error.tsx  Footer.tsx  Header.tsx  MarkdownView.tsx  TargetBlankA.tsx
nublog-front/src/pages/: 404.tsx  _app.tsx  _error.tsx  about.tsx  index.tsx  style.css  tags.tsx
nublog-front/src/pages/articles/: [key].tsx  index.tsx
nublog-front/src/pages/home/: admin.tsx  index.tsx  login.tsx
nublog-front/src/styles/: global.css  local.ts
nublog-front/src/vo/: article.ts  index.ts  user.ts
nublog-server/: .gitignore  Cargo.toml
nublog-server/sql/: drop.sql  setup.sql
nublog-server/src/: config.rs  conn.rs  error.rs  main.rs  middlewares.rs  prelude.rs  repo.rs  rpc.rs  scopes.rs  session.rs  types.rs
nublog-server/src/scopes/: articles.rs  comments.rs  tags.rs  users.rs
pages/: about.vue  index.vue
scripts/: dist.sh
server/routes/: atom.xml.ts  sitemap.xml.ts
utils/: cmp.ts
(+91 files in other folders)
