[package]
name = "nublog-server"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
serde_json = "1.0.56"
anyhow = "1.0.31"
env_logger = "0.7.1"
dotenv = "0.15.0"
